--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,6 +1,7 @@
 // COLORS
 $header: #8ABF51;
 $header-text: #FFFFFF;
+$header-text-hover: #212121;
 $body: #444444;
 // FONTS
 $main-font: 'Roboto',sans-serif;
