--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,8 +1,16 @@
 // COLORS
+
+// GLOBAL
+$body: #444444;
+// HEADER
 $header: #8ABF51;
 $header-text: #FFFFFF;
 $header-text-hover: #212121;
-$body: #444444;
+// SEARCH
+$search-btn: #8ABF51;
+$search-btn-text: #FFFFFF;
+$input-text: #8ABF51;
+
 // FONTS
 $main-font: 'Roboto',sans-serif;
 $global-font-size: 16px;
