items markup, factory of items

--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -10,6 +10,13 @@ $header-text-hover: #212121;
 $search-btn: #8ABF51;
 $search-btn-text: #FFFFFF;
 $input-text: #8ABF51;
+// MOVIES
+$border: 2px solid #8ABF51;
+$shadow: rgba(black, 0.7);
+$title-color: white;
+$title-size: 30px;
+$description-bg: white;
+
 
 // FONTS
 $main-font: 'Roboto',sans-serif;
