--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -5,13 +5,14 @@ header{
 	width: 100%;
 	color: $header-text;
 	background-color: $header;
-	line-height: 60px;  
+	line-height: 60px; 
+	font-weight: 600;  
 	ul{
 		display: flex;
 		justify-content: space-around;
 		flex-wrap: wrap;
 		li{
-			flex: 0 1 160px;
+			flex: 0 1 230px;
 			text-align: center;
 			background-color: $header; 
 			transition: all 200ms;
@@ -19,7 +20,7 @@ header{
 			&:hover{
 				color: $header-text-hover;
 			}
-			@media screen and (max-width: 500px){
+			@media screen and (max-width: 700px){
 				flex: 1 1 100%;
 				border-bottom: 1px solid $header-text; 
 			}
