--- a/src/sass/search.scss
+++ b/src/sass/search.scss
@@ -1,18 +1,21 @@
 @import 'variables.scss';
 
 .searchSection{
-	width: 100%;
+	min-width: 100%;
 	height: 150px;
 	display: flex;
 	align-items: center;
+	justify-content: center;
+	@media screen and (max-width: 700px){
+		padding-top: 120px;  
+	}
 	.search{
-		width: 70%;
-		margin: 0 auto; 
+		min-width: 90%;
 		display: flex;
 		input{
 			border: 0;
 			padding: 9px;
-			flex: 6 1 300px;
+			flex: 6 1 auto;
 			&:focus{
 				outline: none;
 			}
