some styles change

--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -4,9 +4,10 @@ header{
 	height: 60px;
 	width: 100%;
 	color: $header-text;
-	background-color: $header;
+	background-image: $header-gradient;
 	line-height: 60px; 
-	font-weight: 600;  
+	font-weight: 600;
+	box-shadow: $header-shadow; 
 	ul{
 		display: flex;
 		justify-content: space-around;
@@ -14,7 +15,6 @@ header{
 		li{
 			flex: 0 1 230px;
 			text-align: center;
-			background-color: $header; 
 			transition: all 200ms;
 			cursor: pointer;
 			&:hover{
@@ -23,6 +23,8 @@ header{
 			@media screen and (max-width: 700px){
 				flex: 1 1 100%;
 				border-bottom: 1px solid $header-text; 
+				background-image: $header-gradient; 
+				box-shadow: $header-shadow;
 			}
 		}
 	}
