--- a/src/sass/movies.scss
+++ b/src/sass/movies.scss
@@ -10,14 +10,15 @@
 		background: #212121; 
 		margin: 1.5%; 
 		flex: 1 1 300px; 
-		border: $border; 
 		background: $description-bg;
-		border-radius: 3px;  
+		border-radius: 3px; 
+		box-shadow: $movie-shadow;   
+		border-radius: 5px;  
 		.poster{
 			height: 250px;
 			width: 100%;
 			background-size: cover;
-			display: table;
+			display: table; 
 			.shadow{
 				width: 90%;
 				height: 100%;
@@ -28,7 +29,7 @@
 				color: $title-color;
 				text-align: center;
 				padding: 0 5%;
-				overflow: hidden;  
+				overflow: hidden; 
 			}  
 		}
 		.description{
@@ -38,14 +39,38 @@
 			overflow: hidden;
 			word-break: break-all;
 			word-wrap: break-word;
-			text-overflow: elipsis;    
+			text-overflow: elipsis;  
 		}
 		.social{
 			display: flex;
 			width: 100%;
 			height: 26px;  
-			justify-content: space-around; 
+			justify-content: flex-start; 
 			align-items: center;
+			position: relative;
+			color: $social-color;  
+			p{
+				padding-left: 20px; 	
+			}
+			.star{
+				padding-left: 0px; 
+				position: absolute;
+				text-align: center;
+				right: -4px;
+				top: -10px;  
+				width: 50px;
+				height: 50px; 
+				font-size: 22px; 
+				line-height: 50px; 
+				border-radius: 999px;    
+				background: $star-block; 
+				box-shadow: $star-shadow;
+				cursor: pointer; 
+				color: $star-unactive;
+			}
+			i:hover{
+				color: $star-color;
+			}
 		}
 	}
 	.favorites, .nonFavorites{
