--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,21 +1,31 @@
 // COLORS
 
 // GLOBAL
-$body: #444444;
+$body: #F7F8FC;
 // HEADER
-$header: #8ABF51;
+$header-gradient: linear-gradient(to bottom left, #5B206E 20%, #507FCD 100%);
 $header-text: #FFFFFF;
 $header-text-hover: #212121;
+$header-shadow: 0px 5px 5px 0px rgba(0,0,0,0.20);
 // SEARCH
-$search-btn: #8ABF51;
+$search-btn: linear-gradient(to bottom left, #46FCB1 1%, #23E1C6 100%);
 $search-btn-text: #FFFFFF;
 $input-text: #8ABF51;
+$search-placeholder: #757575;
+$search-shadow: 2px 5px 5px 1px rgba(0,0,0,0.20);
+
 // MOVIES
-$border: 2px solid #8ABF51;
-$shadow: rgba(black, 0.7);
+$shadow: rgba(black, 0.2);
 $title-color: white;
 $title-size: 30px;
 $description-bg: white;
+$movie-shadow: 2px 4px 10px 1px #212121;
+$social-color: #757575;
+$star-shadow: 1px 4px 1px 1px rgba(0,0,0,0.30);
+$star-block: #5B206E;
+$star-unactive: black;
+$star-color: #FFFF00;
+
 
 
 // FONTS
