--- a/src/sass/jsStyles.scss
+++ b/src/sass/jsStyles.scss
@@ -22,3 +22,9 @@
 .show-search-js{
     display: none !important;
 }
+
+.padding-if-search-hidden-js{
+    @media screen and (max-width: 700px){
+        padding-top: 120px;  
+    }
+}
