--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -15,8 +15,10 @@ $search-placeholder: #757575;
 $search-shadow: 2px 5px 5px 1px rgba(0,0,0,0.20);
 
 //FILTERS
-$btn-gradient: linear-gradient(to bottom left, #5B206E 20%, #507FCD 100%);
-$btn-shadow: 1px 1px 1px 1px rgba(0,0,0,0.20);
+$btn-gradient: #5B206E;
+$btn-shadow: 1px 1px 1px 1px rgba(0,0,0,0.40);
+$select: #5B206E;
+$select-text: #FFFFFF;
 
 // MOVIES
 $shadow: rgba(black, 0.6);
